fixed issue with the magic line the line was jumping all over the place, or actually the active element created a border which made it look like the line was jumping this fix just renamed the active element on the main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,9 @@ nav {
     color: rgba(255, 255, 255, 1);
     border-bottom: 0.1em solid rgba(255, 255, 255, 1);
 }
+.navbar-option.position {
+    color: rgba(255, 255, 255, 1);
+}
 
  .sidebar-option .active {
     background-color: rgba(0, 0, 0, 0.1);
